[project]
name = "pycades"
readme = "README.md"
version = "1.1.3"
description = 'Расширение Pycades предоставляет программный интерфейс, аналогичный КриптоПро'
authors = [{name = 'Kirill Ogleznev', email="kirill24680@gmail.com"}]


[project.urls]
homepage = "https://docs.cryptopro.ru/cades/pycades"
documentation = "https://docs.cryptopro.ru/cades/pycades"
source = "https://github.com/KirillOgleznev/pycades"